--- a/package.json
+++ b/package.json
@@ -81,6 +81,9 @@
     "build",
     "out"
   ],
+  "dependencies": {
+    "ufo": "^1.3.2"
+  },
   "devDependencies": {
     "@babel/core": "^7.23.7",
     "@babel/eslint-parser": "^7.23.3",
