docs: update readme badges and package info

--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "exports": {
     "import": "./dist/index.mjs",
-    "require": "./dist/index.js"
+    "require": "./dist/index.js",
+    "types": "./dist/index.d.ts"
   },
-  "types": "./src/index.ts",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
   "files": [
     "dist",
     "src"
@@ -125,6 +128,7 @@
       "esm",
       "cjs"
     ],
+    "dts": true,
     "treeshake": true,
     "clean": true,
     "minify": true
