ci: add typecheck

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,4 +36,5 @@ jobs:
       - run: pnpm install
       - run: pnpm run format
       - run: pnpm run lint:js
+      - run: pnpm run typecheck
       - run: pnpm run test
